samples/_failures_safe/1761371362_6c7c5c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9cc7e864.c: In function ‘main’:
./samples/SAFE/__tmp_9cc7e864.c:138:16: error: ‘EX’ undeclared (first use in this function)
  138 |         return EX
      |                ^~
./samples/SAFE/__tmp_9cc7e864.c:138:16: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_9cc7e864.c:138:18: error: expected ‘;’ at end of input
  138 |         return EX
      |                  ^
      |                  ;
./samples/SAFE/__tmp_9cc7e864.c:138:9: error: expected declaration or statement at end of input
  138 |         return EX
      |         ^~~~~~
./samples/SAFE/__tmp_9cc7e864.c:138:9: error: expected declaration or statement at end of input
